@@ -1,3 +1,8 @@
+2002-08-26  Adam Fedor  <fedor@gnu.org>
+
+	* Model/GMAppKit.m (-initWithModelUnarchiver:): Don't add ourselves
+	to the superview if we are the contentView of an NSBox.
+
 2002-08-24  Adam Fedor  <fedor@gnu.org>
 
 	* Source/NSGraphicsContext.m: More documentation.
